tests/a/tests/integrity/fail/fn/fn.1.stderr
error: expected {a}{a}, found {bin}{bin}
  --> tests/integrity/fail/fn/fn.1.rs:10:16
   |
10 |     let x = id(5);
   |                ^
